--- a/sass/components/_main-pages-menu.scss
+++ b/sass/components/_main-pages-menu.scss
@@ -17,6 +17,7 @@
         position: absolute;
         right: 36px;
         top: 10px;
+        color:#5A5A5A;
     }
 
     h1, p {
@@ -41,6 +42,6 @@
 
     .img-responsive {
         width: 1280px;
-        height: 999px;
+        height: 1050px;
     }
 }
