--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -54,6 +54,7 @@ $purple: #9356DC;
 .center-icon-map {
     padding: 0px;
     font-size: 16px;
+    color: #5a5a5a;
 }
 
 input {
@@ -63,6 +64,7 @@ input {
     padding-top: 16px;
     padding-bottom: 16px;
     font-size: 16px;
+    color: #5a5a5a;
 }
 
 .explication-reservation-menu {
@@ -78,6 +80,7 @@ input {
 
     h3 {
        font-weight: lighter;
+       color: #5a5a5a;
     }
 }
 
