--- a/sass/components/_main-pages-menu.scss
+++ b/sass/components/_main-pages-menu.scss
@@ -25,7 +25,16 @@
     }
 }
 
-// DESKTOP ET GRAND ECRAN
+// PETIT ECRAN
+
+@media screen and (min-width: 320px) and (max-width: 374px) {
+
+    .h1-main-heart h1, .h1-main-heart p {
+        font-size: 24px;
+    }
+}
+
+// DESKTOP
 
 @media screen and (min-width: 769px) and (max-width: 1440px) {
 
@@ -33,6 +42,8 @@
         height: 98%;
     }
 }
+
+// GRAND ECRAN
 
 @media screen and (min-width: 1441px) and (max-width: 2560px) {
 
