--- a/style.css
+++ b/style.css
@@ -236,6 +236,11 @@ input {
     margin-bottom: 36px;
   }
 }
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .margin-p-petitecran {
+    margin-left: 25px;
+  }
+}
 @media screen and (min-width: 769px) and (max-width: 1440px) {
   .margin-fonctionnement {
     margin-top: 96px;
@@ -635,6 +640,11 @@ footer p {
   font-size: 28px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .h1-main-heart h1, .h1-main-heart p {
+    font-size: 24px;
+  }
+}
 @media screen and (min-width: 769px) and (max-width: 1440px) {
   .img-main {
     height: 98%;
